Adiciona correção de posição

--- a/fundamentos/bloco-03/dia-3.3/pra-fixar2/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar2/style.css
@@ -1,12 +1,15 @@
 .super-mario {
     width: 200px;
     position: absolute;
+    right: 40%;
+    bottom: 45%;
 }
 
 .goomba {
     width: 100px;
     position: absolute;
     bottom: 200px;
+    right: 46%;
 }
 
 .baloon {
