Adiciona tag p no balão

--- a/fundamentos/bloco-03/dia-3.3/pra-fixar2/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar2/style.css
@@ -13,8 +13,16 @@
 }
 
 .baloon {
+    position: absolute;
+    z-index: 1;
+} 
 
-}
+p {
+    position: absolute;
+    z-index: 2;
+    bottom: 595px;
+    right: 617px;
+    }
 
 .speach {
     font-size: 25px;
