--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
@@ -6,20 +6,27 @@ div:hover {
 
 div:first-of-type {
     color: blue;
+    font-style: italic;
 }
 
 div:nth-of-type(2) {
     color: green;
+    font-weight: bolder;
 }
 
 div:nth-of-type(3) {
     color: rosybrown;
+    font-family: sans-serif;
 }
 
 div:nth-of-type(4) {
     color: rgb(100,050, 050);
-}
+    font-style: unset;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
 
 div:nth-of-type(5) {
     color: rgb(150,250, 150);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: oblique;
 }
