Adiciona 3 div maior

--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
@@ -17,6 +17,7 @@ div:nth-of-type(2) {
 div:nth-of-type(3) {
     color: rosybrown;
     font-family: sans-serif;
+    font-size: xx-large;
 }
 
 div:nth-of-type(4) {
