--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
@@ -18,6 +18,7 @@ div:nth-of-type(4) {
     color: rgb(100,050, 050);
     f       }
 
-div:nth-of-type(5) {
+div:last-of-type {
     color: rgb(150,250, 150);
    }
+
