Adiciona hover - borda.

--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
@@ -1,6 +1,8 @@
 div:hover {
     border: green;
- }
+    border-style: double;
+    border-width: larger;
+     }
 
 div:first-of-type {
     color: blue;
@@ -21,4 +23,3 @@ div:nth-of-type(4) {
 div:last-of-type {
     color: rgb(150,250, 150);
    }
-
