--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
@@ -1,7 +1,5 @@
 div:hover {
-    border: green;
-    border-style: double;
-    border-width: larger;
+    border: 3px double pink;
      }
 
 div:first-of-type {
@@ -18,8 +16,28 @@ div:nth-of-type(3) {
 
 div:nth-of-type(4) {
     color: rgb(100,050, 050);
-    f       }
+   }
 
 div:last-of-type {
     color: rgb(150,250, 150);
    }
+
+div:first-of-type h3 {
+    background-color: rgb(233, 233, 255);
+}
+
+div:nth-of-type(2) h3 {
+    background-color: rgb(105, 203, 155);
+}
+
+div:nth-of-type(3) h3 {
+    background-color: rgb(250, 065, 100);
+}
+
+div:nth-of-type(4) h3 {
+    background-color: rgb(000, 000, 055);
+}
+
+div:nth-of-type(5) h3 {
+    background-color: rgb(230, 180, 230);
+}
