--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-II/style.css
@@ -2,7 +2,7 @@ div:hover {
     border: 3px double pink;
      }
 
-div:first-of-type {
+div:nth-of-type(1) {
     color: blue;
     }
 
@@ -12,17 +12,19 @@ div:nth-of-type(2) {
 
 div:nth-of-type(3) {
     color: rosybrown;
-   }
+    height: 50px;
+    font-size: 30px;
+    }
 
 div:nth-of-type(4) {
     color: rgb(100,050, 050);
    }
 
-div:last-of-type {
+div:nth-of-type(5){
     color: rgb(150,250, 150);
    }
 
-div:first-of-type h3 {
+div:nth-of-type(1) h3 {
     background-color: rgb(233, 233, 255);
 }
 
@@ -31,7 +33,7 @@ div:nth-of-type(2) h3 {
 }
 
 div:nth-of-type(3) h3 {
-    background-color: rgb(250, 065, 100);
+    background-color: rgb(250, 065, 100); 
 }
 
 div:nth-of-type(4) h3 {
@@ -40,4 +42,8 @@ div:nth-of-type(4) h3 {
 
 div:nth-of-type(5) h3 {
     background-color: rgb(230, 180, 230);
+}
+
+div:nth-of-type(odd){
+    font-style: italic;
 }
