--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-III/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-III/style.css
@@ -9,3 +9,12 @@ ol li:nth-of-type(even) {
 ol li:nth-of-type(odd) {
     text-transform: uppercase;
 }
+
+h1, h3 {
+    color: red;
+}
+
+h1 {
+    font-size: 40px;
+    border: 1px solid black;
+}
