Adiciona 20px li, font-weight bold, para quem está negrito.

--- a/fundamentos/bloco-03/dia-3.3/pra-fixar-III/style.css
+++ b/fundamentos/bloco-03/dia-3.3/pra-fixar-III/style.css
@@ -18,3 +18,11 @@ h1 {
     font-size: 40px;
     border: 1px solid black;
 }
+
+ol,ul li {
+   font-size: 20px;
+    }
+
+ol,ul li em {
+    font-weight: bold;
+}
