--- a/front-end/bloco-11-componentes-com-estado-eventos-forms/dia-11.1/conteudo/conteudo/src/index.css
+++ b/front-end/bloco-11-componentes-com-estado-eventos-forms/dia-11.1/conteudo/conteudo/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.green{
+  background-color: green;
+}
+
+.red{
+  background-color: red;
+}
